# mediaforge

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  pubspec.yaml  test_all.sh
.github/workflows/: ci.yml
Design/: DESIGN.md
benchmark/: README.md  pubspec.yaml  run_dart_benchmark.sh
benchmark-results/: benchmarks.md  ffmpeg-bench.json  image-bench.csv  media-bench.json  results.json  rust-bench.json
benchmark/lib/: benchmark_frb_init.dart  benchmark_runner.dart  media_forge_benchmark.dart
benchmark/tools/: download-fixtures.sh  fixtures.json  run.ts
docs/: BEAUTY_GPU.md  FLUTTER_STATE.md  P0_ACCEPTANCE.md  PACKAGE_PLATFORM_MATRIX.md  PHASE3_MEDIAPIPE.md  PUB_DEPLOYMENT_PLAN.md  PUB_PACKAGE_SPLIT.md  V0_ACCEPTANCE.md  VIDEO_MEDIA_RUNTIME.md  VIDEO_PACKAGE_SPLIT.md
examples/image_editor/: README.md  pubspec.yaml
examples/media_studio/: README.md  pubspec.yaml
rust_image/: .gitignore  README.md  build.yaml  pubspec.yaml
rust_image/android/: build.gradle
rust_image/benchmark/: README.md  pubspec.yaml  run_dart_benchmark.sh
rust_image/ios/: rust_image.podspec
rust_image/lib/: rust_image.dart
rust_image/linux/: CMakeLists.txt
rust_image/macos/: rust_image.podspec
scripts/: build-ffmpeg-macos-vt.sh  package-video-android.sh  rebuild-rust-image-android.sh  rebuild-rust-image-ios.sh  rebuild-video-native-macos.sh  run-android.sh  run-ios.sh  run-media-studio-android.sh  run-media-studio-engine.sh  run-media-studio-ios.sh  run-media-studio-macos.sh  run-rust-media-macos.sh  run-video-editor-macos.sh  run-video-macos.sh
video/: Cargo.toml
(+298 files in other folders)
