# Rust workspace lives in packages/video_processor_core/Cargo.toml
[workspace]
members = ["../packages/video_processor_core/rust"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["flutter_video_processor contributors"]

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "sync", "time"] }
uuid = { version = "1.11", features = ["v4"] }
parking_lot = "0.12"
mp4parse = "0.17.0"
memmap2 = "0.9.10"
flutter_rust_bridge = "2.12.0"
ffmpeg-next = "8.1.0"
log = "0.4"
env_logger = "0.11"
image = { version = "0.25", default-features = false, features = ["jpeg", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
fast_image_resize = "5.5"
